# porting-playground

./: -CMakeLists.txt  CMakeLists.txt  README.md  amap.cfg
drivers/vga-nextgen/: vga.c
src/: 65816.c  MiniFB.h  WinMiniFB.c  dsp.c  exec.c  io.c  main.c  main.cpp  native.c  ppu.c  snes.h  spc.c  tusb_config.h
src/gw/cpus/: sm500.h  sm500core.c  sm500op.c  sm510.h  sm510base.c  sm510core.c  sm510op.c  sm511core.c  sm5acore.c
src/gw/gw_sys/: gw_graphic.c  gw_romloader.c  gw_system.c
src/kiwi/: input.c  input.h  megadrive.c  megadrive.h  vdp.c  vdp.h  z80.h
src/kiwi/m68k/: m68k_in.c  m68kconf.h  m68kcpu.c  m68kcpu.h  m68ki_cycles.h  m68ki_instruction_jump_table.h  m68kmake  m68kmake.c  m68kops.c  m68kops.h
src/lynx/: cart.cpp  eeprom.h  mikie.cpp  mikie.h  ram.h  susie.cpp  system.cpp  system.h
src/neopop/: bios.c  mem.c  neopop.c  neopop.h  rom.c  sound.c
src/oswan/: gpu.c  io.c  memory.c  rom.c  rom.h  types.h  ws.c  ws.h
src/pce-go/: gfx.c  pce-go.c  pce.c  pce.h
src/potator/: gpu.c  gpu.h  memorymap.c  memorymap.h  sound.c  sound.h  supervision.h  timer.c  timer.h  types.h  watara.c
src/snes9x/: gfx.c  gfx.h  memmap.h  port.h  save.c
